--- a/index.html
+++ b/index.html
@@ -319,6 +319,17 @@
 
 					   </ul>
 				   </div><!-- skill-box -->
+				   <div class="skill-box">
+					<ul>
+						<h2>LANGUAGES</h2>
+						<li><i class="fa-solid fa-angle-right"></i>English Native <span>speaker</span></li>
+						<li><i class="fa-solid fa-angle-right"></i>Japanese Highly <span>proficient</span></li>
+						<li><i class="fa-solid fa-angle-right"></i>Hindi Native <span>speaker</span></li>
+						<li><i class="fa-solid fa-angle-right"></i>Punjabi Native <span>speaker</span></li>
+						<li><i class="fa-solid fa-angle-right"></i>Urdu Highly <span>proficient</span></li>
+						<li><i class="fa-solid fa-angle-right"></i>Spanish Working <span>knowledge</span></li>
+					</ul>
+				</div><!-- skill-box -->
 				   
 				   
    
