--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 
 					   </ul>
 				   </div><!-- skill-box -->
-				   <div class="skill-box">
+				   <div class="skill-box language">
 					<ul>
 						<h2>LANGUAGES</h2>
 						<li><i class="fa-solid fa-angle-right"></i>English Native <span>speaker</span></li>
